syntax = "proto3";

package errcode.v1;

option go_package = "errcode/v1;errcodev1";

// @plugins=protoc-gen-go-errors
// 错误定义集合
enum Error {
  // @code=UNKNOWN
  // @i18n.cn="未知类型"
  // @i18n.en="UNKNOWN error"
  ERR_UNKNOWN = 0;
  // @code=INTERNAL
  // @i18n.cn="内部错误"
  // @i18n.en="INTERNAL error"
  ERR_INTERNAL = 1;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="参数错误"
  // @i18n.en="INVALID_ARGUMENT error"
  ERR_INVALID_ARGUMENT = 2;
  // @code=NOT_FOUND
  // @i18n.cn="找不到资源"
  // @i18n.en="NOT_FOUND error"
  ERR_NOT_FOUND = 3;
  // @code=ALREADY_EXISTS
  // @i18n.cn="已经存在"
  // @i18n.en="ALREADY_EXISTS error"
  ERR_ALREADY_EXIST = 4;
  // @code=PERMISSION_DENIED
  // @i18n.cn="没有权限"
  // @i18n.en="PERMISSION_DENIED error"
  ERR_ALREADY_PERMISSION_DENIED = 5;
  // @code=ABORTED
  // @i18n.cn="放弃操作"
  // @i18n.en="ABORTED error"
  ERR_ABORTED = 6;
  // @code=OUT_OF_RANGE
  // @i18n.cn="超过限制"
  // @i18n.en="OUT_OF_RANGE error"
  ERR_OUT_OF_RANGE = 7;
  // @code=DATA_LOSS
  // @i18n.cn="超过限制"
  // @i18n.en="DATA_LOSS error"
  ERR_DATA_LOSS = 8;
  // @code=INTERNAL
  // @i18n.cn="DB错误"
  // @i18n.en="Intern DB error"
  ERR_DB_ERROR = 9;
  // @code=INTERNAL
  // @i18n.cn="Redis错误"
  // @i18n.en="Intern Redis error"
  ERR_REDIS_ERROR = 10;
  // @code=INTERNAL
  // @i18n.cn="编码 JSON 错误"
  // @i18n.en="Marshal JSON error"
  ERR_JSON_MARSHAL_ERROR = 11;
  // @code=INTERNAL
  // @i18n.cn="编码 PROTO 错误"
  // @i18n.en="Marshal PROTO error"
  ERR_PROTO_MARSHAL_ERROR = 12;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="UID不能为空"
  // @i18n.en="UID can't be empty"
  ERR_UID_EMPTY = 101;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="社区不能为空"
  // @i18n.en="Community can't be empty"
//  ERR_COMMUNITY_GUID_EMPTY = 102;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="名字不能为空"
  // @i18n.en="Name can't be empty"
  ERR_NAME_EMPTY = 103;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="LOGO不能为空"
  // @i18n.en="Logo can't be empty"
  ERR_LOGO_EMPTY = 104;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="自定义域名不能为空"
  // @i18n.en="Custom domain can't be empty"
  ERR_CUSTOM_DOMAIN_EMPTY = 105;
  // @code=ALREADY_EXISTS
  // @i18n.cn="自定义域名已经存在"
  // @i18n.en="Custom domain already exist"
  ERR_CUSTOM_DOMAIN_ALREADY_EXIST = 106;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="文件GUID不能为空"
  // @i18n.en="File guid can't be empty"
  ERR_FILE_GUID_EMPTY = 107;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="空间分组不能为空"
  // @i18n.en="space group can't be empty"
  ERR_SPACE_GROUP_EMPTY = 108;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="空间不能为空"
  // @i18n.en="space can't be empty"
  ERR_SPACE_EMPTY = 109;
  // @code=PERMISSION_DENIED
  // @i18n.cn="社区版本到最大限制"
  // @i18n.en="community edition reach limited"
  ERR_EDITION_REACH_LIMITED = 110;
  // @code=PERMISSION_DENIED
  // @i18n.cn="你没有权限"
  // @i18n.en="you don't have permission"
  ERR_PMS_PERMISSION_DENIED = 111;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="操作用户不能为空"
  // @i18n.en="operate uid can't be empty"
  ERR_OPERATE_UID_EMPTY = 112;
  // @code=ALREADY_EXISTS
  // @i18n.cn="不能重复申请"
  // @i18n.en="repeated apply forbidden"
  ERR_REPEATED_APPLY = 113;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="guid不匹配"
  // @i18n.en="guid not match"
  ERR_COMMUNITY_GUID_NOT_MATCH = 114;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="guid不存在"
  // @i18n.en="guid not exist"
  ERR_COMMUNITY_GUID_NOT_EXIST = 115;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="实体Guid不能为空"
  // @i18n.en="Guid can't be empty"
  ERR_GUID_EMPTY = 116;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="社区可见度非法"
  // @i18n.en="cmt not match"
  ERR_COMMUNITY_VISIBILITY_INVALID = 118;
  // 文件名称长度不合法
  // @code=INVALID_ARGUMENT
  // @i18n.cn="file name should not less than 0 or bigger than 100"
  // @i18n.en="get parent token fail"
  ERR_FILE_NAME_LENGTH = 119;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="业务Guid不能为空"
  // @i18n.en="Business guid can't be empty"
  ERR_BIZ_GUID_EMPTY = 120;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="文本内容不能为空"
  // @i18n.en="Content can't be empty"
  ERR_FILE_CONTENT_EMPTY = 121;
  // @code=UNKNOWN
  // @i18n.cn="授权未知错误"
  // @i18n.en="auth invalid"
  AUTH_ERR_INVALID = 200;
  // 获取sub token的浏览器系统错误
  // @code=INTERNAL
  // @i18n.cn="浏览器token cookie系统错误"
  // @i18n.en="token cookie invalid"
  AUTH_ERR_BROWSER_COOKIE_SYSTEM_ERROR = 201;
  // 获取parent token的浏览器系统错误
  // @code=INTERNAL
  // @i18n.cn="浏览器parent token cookie系统错误"
  // @i18n.en="parent token cookie invalid"
  AUTH_ERR_BROWSER_PARENT_COOKIE_SYSTEM_ERROR = 202;
  // parent token不存在
  // @code=INVALID_ARGUMENT
  // @i18n.cn="浏览器parent token不存在"
  // @i18n.en="parent token cookie empty"
  AUTH_ERR_BROWSER_PARENT_COOKIE_EMPTY = 203;
  // grpc获取parent token失败
  // @code=INTERNAL
  // @i18n.cn="获取access失败"
  // @i18n.en="get parent token fail"
  AUTH_ERR_GET_ACCESS_BY_PARENT_COOKIE_ERROR = 204;
  // refresh token失败
  // @code=INTERNAL
  // @i18n.cn="刷新token失败"
  // @i18n.en="get parent token fail"
  AUTH_ERR_REFRESH_TOKEN_ERROR = 205;
  // 获取用户信息失败
  // @code=INTERNAL
  // @i18n.cn="获取用户信息失败"
  // @i18n.en="get parent token fail"
  AUTH_ERR_GET_USER_INFO_BY_TOKEN_ERROR = 206;
  // @code=UNKNOWN
  // @i18n.cn="个人中心未知错误"
  // @i18n.en="profile invalid"
  ERR_PROFILE_INVALID = 300;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="手机号已存在"
  // @i18n.en="phone exist"
  ERR_PROFILE_PHONE_EXIST = 301;
  // @code=INVALID_ARGUMENT
  // @i18n.cn="邮箱已存在"
  // @i18n.en="email exist"
  ERR_PROFILE_EMAIL_EXIST = 302;
  // 用户已加入社区
  // @code=ALREADY_EXISTS
  // @i18n.cn="用户已加入社区"
  // @i18n.en="get parent token fail"
  ERR_USER_HAS_JOINED_CMT = 400;
}
